<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meeters</string>
    <!-- Hint -->
    <string name="input_password_hint">Password</string>
    <string name="input_account_hint">Email / Phone</string>
    <!-- Message -->
    <string name="forget_password">Forget Password? No Worry!</string>

    <!-- Label -->
    <string name="login_button_label">Login</string>
    <string name="register_button_label">Register</string>
    <string name="login_find_password_button_label"><u>click here!</u></string>
    <string name="menu_settings">Menu Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_content_holder">ContentHolder</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">GoLunch</string>

    <string name="title_section1">My Activities</string>
    <string name="title_section2">Nearby Activities</string>

    <string name="menu_logout_label">Logout</string>
    <string name="menu_search_label">Search nearby</string>
    <string name="menu_profile_label">My Profile</string>
    <string name="menu_help_label">Help</string>
    <string name="menu_new_party_label">+</string>
    <string name="menu_help_contact"></string>

    <!-- Search fragment -->
    <string name="search_nearby_search_btn_label">Search</string>
    <string name="search_nearby_cancel_btn_label">Cancel</string>
    <string name="search_nearby_screen_title">Filter your result by</string>
    <string name="search_nearby_fragment_title">Search nearby activities</string>

    <string name="date_time_picker_pick_btn_label">Choose Time </string>

    <string name="search_nearby_progress_dialog">Loading...</string>
</resources>
