<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/topmenu_action_profile"
        android:title="@string/menu_profile_label">
    </item>
    <!--

    <item
        android:id="@+id/topmenu_action_map"
        android:showAsAction="ifRoom"
        android:title="@string/menu_map_label">
    </item>
    -->
    <item
        android:id="@+id/topmenu_action_contact"
        android:title="@string/menu_help_contact">
    </item>
    <item
        android:id="@+id/topmenu_action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        android:title="@string/menu_search_label">
    </item>
    <item
        android:id="@+id/topmenu_action_logout"
        android:title="@string/menu_logout_label">
    </item>
    <item
        android:id="@+id/topmenu_action_start_new_party"
        app:showAsAction="always"
        android:title="@string/menu_new_party_label">

    </item>

</menu>