<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/search_nearby_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/search_nearby_screen_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ListView
        android:id="@+id/search_nearby_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/search_nearby_search_btn"
        android:layout_alignParentLeft="true"
        android:dividerHeight="2dp"
        android:layout_below="@+id/search_nearby_text" >

    </ListView>
    
    <Button
        android:id="@+id/search_nearby_search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/search_nearby_cancel_btn"
        android:layout_marginRight="40dp"
        android:text="@string/search_nearby_search_btn_label" />   

    <Button
        android:id="@+id/search_nearby_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_nearby_list"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/search_nearby_cancel_btn_label" />

</RelativeLayout>