<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.45"
                android:background="@android:color/transparent"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/home_logo" />
            <EditText
                android:id="@+id/login_et_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:hint="@string/input_account_hint"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue"
                android:textSize="18sp" >
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/login_et_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:hint="@string/input_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dip"
                android:paddingLeft="0dip"
                android:paddingRight="0dip"
                android:paddingTop="20dip" >

                <Button
                    android:id="@+id/login_btn_register"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="9dip"
                    android:layout_marginLeft="9dip"
                    android:layout_marginRight="9dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="10dip"
                    android:text="@string/register_button_label" />

                <Button
                    android:id="@+id/login_btn_login"
                    style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="9dip"
                    android:layout_marginLeft="9dip"
                    android:layout_marginRight="9dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="10dip"
                    android:text="@string/login_button_label" />
            </LinearLayout>
            <TextView
                android:id="@+id/login_htv_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:clickable="true"
                android:text="@string/forget_password"
                android:textColor="@color/green"
                android:textSize="14sp" />

            <Button
                android:id="@+id/login_btn_find_password"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:background="#00000000"
                android:text="@string/login_find_password_button_label"
                android:textColor="@color/green"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>



